# SYCkLe

./: BUILD-README.md  CMakeLists.txt  README.md
data/: input.txt
include/: syckle.hpp
src/: blur.cpp  main.cpp  sycl-ls.cpp  vector.cpp
